[workspace]
members = [
    "crates/*"
]

[workspace.package]
version = "0.1.0"
rust-version = "1.85.0"

[workspace.dependencies]
# walkers = { git = "https://github.com/Lunna5/walkers.git", branch = "main" }
walkers = { path = "crates/walkers"}
egui = "0.32"
egui-wgpu = "0.32.0"
eframe = { version = "0.32", features = ["wgpu"] }
egui_extras = { version = "0.32", features = ["svg"] }
wgpu = { version = "25", default-features = true }
env_logger = "0.11"
log = "0.4.27"
puffin = "0.19.1"
puffin_http = "0.16.1"
toml = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.10"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "macros", "sqlite"] }
profiling = { version = "1.0.17", features = ["profile-with-puffin"] }
lazy_static = "1.5.0"
moka = { version = "0.12.10", features = ["sync"] }
rayon = "1.10.0"