[package]
name = "viewer-native"
edition = "2024"
version.workspace = true
rust-version.workspace = true

[dependencies]
viewer = { path = "../viewer" }
kv-sys = { path = "../kv-sys" }
utils = { path = "../utils" }

eframe.workspace = true
sqlx.workspace = true
tokio.workspace = true
egui.workspace = true
env_logger = "0.11.8"
puffin.workspace = true
profiling = { workspace = true }
puffin_http.workspace = true
log.workspace = true